stop the active local task tab jumping around

--- a/genesis_SUBTHEME/css/html-elements.css
+++ b/genesis_SUBTHEME/css/html-elements.css
@@ -1,4 +1,4 @@
-/* $Id: html-elements.css,v 1.1 2010/01/11 06:43:15 jmburnz Exp $ */
+/* $Id: html-elements.css,v 1.2 2010/01/11 07:28:12 jmburnz Exp $ */
 
 /**
  * @file html-elements.css
@@ -262,7 +262,7 @@ input.form-text,
 textarea {
   border: 1px solid #CCC;
   height: auto; 
-  padding: 0.1875em;
+  padding: 0.1875em 0;
 }
 
 textarea, 
